better quality imgs, z-index fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -123,6 +123,7 @@
 }
 
 .app-screenshots {
+  z-index: 10;
 }
 
 .app-screenshots img {
